modification edit proj

--- a/videos/templates/edit_proj.html
+++ b/videos/templates/edit_proj.html
@@ -5,8 +5,59 @@
 {{message}}
 {% endif %}
 
+<div class="card" id="div_form">
+  
+  
+  
+  <h2 class="card-header">Édition d'une vidéo</h2>
 
+<div class="card-body">
+  <form action="{% url 'edit_proj' p.id %}" method="post" >
+  
+      {% csrf_token %}
+  
+      <div class="form-group row">
+          <label class="col-sm-2 col-form-label">Titre</label>
+          <div class="col-sm-10">
+              <input type="text" class="form-control"  id="titre" value="{{p.titre}}" name="titre">
+          </div>
+      </div>
 
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Screenshot</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" name="image" value="{{p.image}}">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Promo du JTX</label>
+        <div class="col-sm-10">
+            <input class="form-control" id="duree" type="number" name="promo" value="{{p.promo}}" min="1991" max="2030" step="1" onkeyup="update_time()" >
+            <span id="time_fr"></span>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Catégorie</label>
+        <div class="col-sm-10">
+            <select class="form-control" name="category" id="select_category_edit_vid">
+                {% for c in categories %}
+                    <option {% if p.category == c %} selected {% endif %} value="{{c.id}}">{{c.titre}}</option>
+                {% endfor %}
+            </select>
+        </div>
+    </div>
+    
+    <div class="form-group row">
+      <label class="col-sm-2 col-form-label">Description</label>
+      <div class="col-sm-10">
+          <textarea class="form-control" id="" name="description">{{p.description}}</textarea>
+      </div>
+    </div>
+  
+
+<!-- 
 <div class="container">
 
 
@@ -64,14 +115,22 @@
 
     {% endfor %}
 
-</table>
+</table> -->
+
+<hr>
+
+{% for r in p.relation_proj_set.all %}
+<div class="form-group row justify-content-center">
+  <label class="col-10 col-md-4 col-form-label">{{r.video.titre}}</label> 
+  <input class="form-control col-2" type="number" id="r_video_{{r.id}}" name ="r_video_{{r.id}}" value="{{r.ordre}}" max="999" min="-999"/>
+</div>
+{% endfor %}
 
 
-
-
-<input type="submit" value="Modifier la proj" class="edit_bouton"/>
+<input type="submit" value="Modifier la proj" class="btn btn-success float-right"/>
 </form>
 
+</div>
 </div>
 
 
