--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load app_filters %}
 
 <!DOCTYPE html>
 <html lang='fr'>
@@ -27,6 +28,25 @@
 </head>
 
 <!-- <body onload="checkbar()"> -->
+
+  <style>
+    {% for c in "categories"|get_list %}
+      .cat_{{c.id}}{
+        color:{{c.color}};
+        border-color:{{c.color|replace_opacity:'0.7'}};
+        width:10px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      .cat_{{c.id}}:hover{
+        color:{{c.color}};
+        background-color: {{c.color|replace_opacity:'0.07'}};
+        text-decoration: none;
+      }
+    {% endfor %}
+  </style>
 
 <body>
   
