Correction d'un bug et BDD assez full

--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -612,7 +612,7 @@ if(quality=='md'){
   document.getElementById('btn_quality_md').classList.add('active');
 }
 if(quality=='sd'){
-  change_flux_to('{{video.sd}',3);
+  change_flux_to('{{video.sd}}',3);
   document.getElementById('btn_quality_sd').classList.add('active');
 }
 
