--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -9,7 +9,7 @@
     
    
       <video id="video" class="embed-responsive-item" controls autoplay>
-        
+        <track label="Français" kind="subtitles" srclang="fr" default id='sub'>
       </video> 
         
     
@@ -392,6 +392,9 @@ var titre_video_suivante = document.getElementById('titre_video_suivante');
 var proj_auteurs = document.getElementById('proj_auteurs');
 var source = document.createElement('source');
 video.appendChild(source);
+var subtitle = document.getElementById('sub');
+
+
 var titre = document.getElementById('titre_video');
 var current = 0;
 
@@ -421,7 +424,7 @@ if(glob_quality==''){glob_quality='md'}
     'non',
     {% endif %}
 
-    '{{r.video|auteurs|striptags}}', '{{r.video.id}}',{{r.ordre}}]
+    '{{r.video|auteurs|striptags}}', '{{r.video.id}}',{{r.ordre}}, {{r.video.subtitles}}]
 
     x = [];
 	{% for r2 in r.video.relation_tag_set.all %}
@@ -500,7 +503,7 @@ function change_flux_to(qualite, from_strart='oui'){
   else{
     source.setAttribute('src', playlist[current][indice]+'#t='+time.toString());
   }
-  
+  subtitle.setAttribute('src', playlist[current][7]);
   
   video.load();
   video.play();
