petit shift du titre JTX du site vers le haut

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -70,9 +70,9 @@
           
 
        
-          <a href="{% url 'index' %}" id="titre_site" class="d-none  d-md-block" style="width:150px;text-align:center;">
+          <a href="{% url 'index' %}" id="titre_site" class="d-none  d-md-block" style="width:150px;text-align:center;padding-bottom:5px;">
               <!-- <div id="entourer_titre"></div> -->
-               <span id="titre_site_h1" class="" > JTX </span>
+               <span id="titre_site_h1" class="" style="" > JTX </span>
            
           </a>
 
