modif erreur js

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -19,7 +19,7 @@
    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" />
    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.1.1/css/responsive.bootstrap4.min.css" />
    <link href="http://vjs.zencdn.net/6.2.7/video-js.css" rel="stylesheet">
-   <link href="{% static 'admin/css/videojs-qualityselector.css'%}"  rel="stylesheet">
+   <!-- <link href="{% static 'admin/css/videojs-qualityselector.css'%}"  rel="stylesheet"> -->
 
        
 
@@ -173,19 +173,7 @@
           </a>
           {% endif %}
 
-<!--           
-          <a href="{% url 'categories' %}" class="dropdown-item">
-            <div class="" style="padding-left:20px;">
-              Catégories
-            </div>
-          </a>
 
-           <a href="{% url 'fil' 1 %}" class="dropdown-item">
-            <div class="" style="padding-left:20px;">
-              <span class="glyphicon glyphicon-sort-by-attributes"></span>  Fil
-            </div>
-          </a> -->
-          
 
           <a href="{% url 'tags' %}" class="dropdown-item">
               <div class="d-flex ">
