--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -55,7 +55,7 @@
 									</span>
 								</div>
 								<small style="position:relative;top:-6px;color:grey;"> 
-										<a href="{% url 'jtx' elmt.promo %}" style="color:grey;">
+										<a href="" style="color:grey;">
 												JTX {{elmt.video.promo}}
 										</a>
 												- {{elmt.video.views}} vues
