--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -574,7 +574,7 @@ function launch(id,  from_strart='oui') {
 
   document.getElementById('lien_precedente').onclick=function(){ launch(Math.max(1,current-1)) };
   document.getElementById('lien_suivante').onclick=function(){ launch(Math.min(playlist.length-1,current+1)) };
-  document.getElementById('lien_en_cours_solo').href='/video/'+playlist[current][5].toString();
+  document.getElementById('lien_en_cours_solo').href='jtx/video/'+playlist[current][5].toString();
 }
 
 video.addEventListener('ended',next,false);
