test chrome de merde

--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -504,7 +504,7 @@ $(function () {
           video.play();
         }
         else{
-          video.pause();
+          // video.pause();
         }
         
         }
