changement de couleur des barre d'accueil

--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -43,7 +43,7 @@
 							</div>
 							<div class="p-0" style="width:100%;margin-left:10px;">
 								<div class="progress">	
-									<div class="progress-bar  progress_bar_class" role="progressbar" style="width: {{elmt.jaime_du_mois|get_percent_abs:max_nb_jaime}}%">
+									<div class="progress-bar bg-danger progress_bar_class" role="progressbar" style="width: {{elmt.jaime_du_mois|get_percent_abs:max_nb_jaime}}%">
 											{{elmt.jaime_du_mois}} j'aime
 									</div>
 								</div>
