probleme proj chrome

--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -9,7 +9,7 @@
     
    
       <video id="video" class="embed-responsive-item" controls autoplay>
-        <track label="Français" kind="subtitles" srclang="fr" default id='sub'>
+        <track label="Français" kind="subtitles" srclang="fr" default id='sub' src="/">
       </video> 
         
     
